--- a/HTML Crash Course/scripts/CrashCourse1.html
+++ b/HTML Crash Course/scripts/CrashCourse1.html
@@ -70,7 +70,7 @@
         <br>
 
         <!-- Forms -->
-        <form action="process.php" method="POST">
+        <form>
         <div>
             <label>First Name</label>
             <input type="text" name="first-name" placeholder="Enter first name">
