--- a/Responsive Website Project/about.html
+++ b/Responsive Website Project/about.html
@@ -14,9 +14,16 @@
     <!--Navbar-->
 
     <nav class="navbar">
+        <div class="logo">
+            <a href="">
+              Lorem Ipsum Cafe
+            </a>
+        </div>
         <div class="container">
-            <img src="" alt="">
-            <ul class="nav">
+            <input type="checkbox" class="toggle-menu">
+            <div class="hamburger"></div>
+
+            <ul class="menu">
                 <li>
                     <a href="index.html" class="underline-hover-effect">Home</a>
                 </li>
@@ -32,11 +39,6 @@
                 <li>
                     <a href="reserve.html"class="underline-hover-effect">Make a Reservation</a>
                 </li>
-                <li>
-                    <a href="https://www.instagram.com/kaiyancreates" class="fa fa-instagram"></a>
-                    <a href="https://www.instagram.com/kaiyancreates" class="fa fa-twitter"></a>
-                    <a href="https://www.instagram.com/kaiyancreates" class="fa fa-facebook"></a>
-                </li>
 
             </ul>
         </div>
@@ -44,20 +46,17 @@
     <!--Top Area With Title-->
 
 
-    <header>
-        <h1>About Us</h1>
-    </header>
-
-    <section class="container">
+    <section class="half-page">
         <div class="about-us">
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus maiores eum modi corrupti. Error, dolor, quam, ratione perferendis unde expedita excepturi aliquam magnam odit numquam labore et assumenda maiores alias quod? At aut accusamus impedit incidunt, minus ducimus error! Magnam illum, provident, saepe voluptatem sint rerum quo adipisci, fugiat modi deleniti expedita dolores.</p>
+            <h1>About Us</h1>
+
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam earum distinctio rem quisquam unde eos fugiat molestias nobis at inventore omnis ut odit repellat voluptate, blanditiis eaque laborum dicta quas pariatur alias magni perspiciatis ipsam aperiam nulla? Impedit autem commodi qui id, ex, dolorum porro cupiditate dolor maiores error asperiores repudiandae quo possimus sed perferendis necessitatibus ipsum modi itaque, non nisi accusamus voluptas quaerat blanditiis inventore? Dolorem quod ex sed ipsam totam! Provident laborum voluptates voluptas officiis ex minima quibusdam, rem odit! Atque ex similique id sequi eius voluptate vitae sit, iure, expedita et ipsa esse, numquam repellat. Suscipit, doloremque!</p>
         </div>
         <div class="about-us">
-            <img src="soup.png" alt="">
         </div>
-        </section>
+    </section>
 
-
+    
 
 
 
