--- a/Responsive Website Project/reserve.html
+++ b/Responsive Website Project/reserve.html
@@ -14,9 +14,16 @@
     <!--Navbar-->
 
     <nav class="navbar">
+        <div class="logo">
+            <a href="">
+              Lorem Ipsum Cafe
+            </a>
+        </div>
         <div class="container">
-            <img src="" alt="">
-            <ul class="nav">
+            <input type="checkbox" class="toggle-menu">
+            <div class="hamburger"></div>
+
+            <ul class="menu">
                 <li>
                     <a href="index.html" class="underline-hover-effect">Home</a>
                 </li>
@@ -31,13 +38,6 @@
                 </li>
                 <li>
                     <a href="reserve.html"class="underline-hover-effect">Make a Reservation</a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/kaiyancreates" class="fa fa-instagram"></a>
-        
-                    <a href="https://www.instagram.com/kaiyancreates" class="fa fa-twitter"></a>
-                
-                    <a href="https://www.instagram.com/kaiyancreates" class="fa fa-facebook"></a>
                 </li>
 
             </ul>
