--- a/Responsive Website Project/index.html
+++ b/Responsive Website Project/index.html
@@ -14,16 +14,16 @@
 <body>
     <!--Navbar-->
     <nav class="navbar">
-        <div class="logo">
-            <a href="">
+        <div class="logo"> <!--on the left logo-->
+            <a href="index.html">
               Lorem Ipsum Café
             </a>
         </div>
-        <div class="container">
-            <input type="checkbox" class="toggle-menu">
+        <div class="container"> 
+            <input type="checkbox" class="toggle-menu"> <!--Checkbox to determine if the menu is open or closed-->
             <div class="hamburger"></div>
 
-            <ul class="menu">
+            <ul class="menu"> <!--navbar menu items-->
                 <li>
                     <a href="index.html" class="underline-hover-effect">Home</a>
                 </li>
@@ -43,9 +43,8 @@
             </ul>
         </div>
        </nav>
+
     <!--Top Area With Title-->
-
-
     <header id="showcase" class="grid">
         <div class="background-image"></div>
         <div class="content-wrap">
@@ -54,17 +53,8 @@
     </div>
     </header>
 
-<!--
-    <div id="header">
-            <div>
-                <h1>Restuarant Name</h1>
-                <h2>Fine Dining </h2>
-            </div>
-        </div>
-    -->
-
     <!--Section with boxes and info-->
-    <section id="boxes" class="grid">
+    <section id="boxes">
         <ul>
             <li>
                 <div class="box">
@@ -92,7 +82,6 @@
     </section>
 
     <!--Location-->
-
     <section id="location">
         <ul class="maps">
             <li>
@@ -108,18 +97,20 @@
             </li>
         </ul>
     </section>
+
     <!--Footer-->
     <footer>
-        <h4>Name</h4>
-           <span> 
+        <h4>Lorem Ipsum Café</h4>
+        <p>all photos by Kaiyan Chu</p>
+        <span> 
             <a href="https://www.instagram.com/kaiyancreates" class="fa fa-instagram"></a>
         
             <a href="https://www.instagram.com/kaiyancreates" class="fa fa-twitter"></a>
         
             <a href="https://www.instagram.com/kaiyancreates" class="fa fa-facebook"></a>
         </span>
-        <p>(416) 443-1030</p>  
-        <p>all photos by @kaiyancreates</p>
+        <p>@kaiyancreates</p>
+
     </footer>
 </body>
 </html>
