--- a/Responsive Website Project/menu.html
+++ b/Responsive Website Project/menu.html
@@ -19,8 +19,8 @@
 
     <nav class="navbar">
         <div class="logo">
-            <a href="">
-              Lorem Ipsum Cafe
+            <a href="index.html">
+              Lorem Ipsum Café
             </a>
         </div>
         <div class="container">
@@ -225,16 +225,17 @@
 
     <!--Footer-->
     <footer>
-        <h4>Name</h4>
-           <span> 
+        <h4>Lorem Ipsum Café</h4>
+        <p>all photos by Kaiyan Chu</p>
+        <span> 
             <a href="https://www.instagram.com/kaiyancreates" class="fa fa-instagram"></a>
         
             <a href="https://www.instagram.com/kaiyancreates" class="fa fa-twitter"></a>
         
             <a href="https://www.instagram.com/kaiyancreates" class="fa fa-facebook"></a>
         </span>
-        <p>85 Moatfield</p>
-        <p>(416) 443-1030</p>
+        <p>@kaiyancreates</p>
+
     </footer>
 </body>
 </html>
