pretty much done might be done but idk

--- a/Responsive Website Project/menu.html
+++ b/Responsive Website Project/menu.html
@@ -60,7 +60,7 @@
                             <p class="alignleft">Portabello Mushroom Salad</p>
                             <p class="alignright">12</p>
                             <br>
-                            <p class="alignleft">Fresh arugula, portabello mushrooms, goat cheese, balsamic vinaigrette</p>
+                            <p class="item-description">Fresh arugula, portabello mushrooms, goat cheese, balsamic vinaigrette</p>
                             <br>
                         </div>
                     </li>
@@ -69,7 +69,7 @@
                             <p class="alignleft">Lobster Bisque</p>
                             <p class="alignright">16</p>
                             <br>
-                            <p class="alignleft">Creamy soup with succulent lobster</p>
+                            <p class="item-description">Creamy soup with succulent lobster</p>
                             <br>
                         </div>
                     </li>
@@ -78,7 +78,7 @@
                             <p class="alignleft">Beef Carpaccio</p>
                             <p class="alignright">13</p>
                             <br>
-                            <p class="alignleft">Thinly sliced raw of beef fillet with olive oil and lemon juice</p>
+                            <p class="item-description">Thinly sliced raw of beef fillet with olive oil and lemon juice</p>
                             <br>
                         </div>
                     </li>
@@ -87,7 +87,7 @@
                             <p class="alignleft">Seared Scallops</p>
                             <p class="alignright">13</p>
                             <br>
-                            <p class="alignleft">Served with a beure blanc</p>
+                            <p class="item-description">Served with a buere blanc</p>
                             <br>
                         </div>
                     </li>
@@ -102,7 +102,7 @@
                             <p class="alignleft">Prime Rib</p>
                             <p class="alignright">29</p>
                             <br>
-                            <p class="alignleft">Served with mashed potatoes and asparagus</p>
+                            <p class="item-description">Served with mashed potatoes and asparagus</p>
                             <br>
                         </div>
                     </li>
@@ -111,7 +111,7 @@
                             <p class="alignleft">Taiwaneese Beef Noodle Soup</p>
                             <p class="alignright">24</p>
                             <br>
-                            <p class="alignleft">Clear beef broth with served with braised beef and cilantro</p>
+                            <p class="item-description">Clear beef broth with served with braised beef and cilantro</p>
                             <br>
                         </div>
                     </li>
@@ -120,7 +120,7 @@
                             <p class="alignleft">Fresh Mushroom Ravioli</p>
                             <p class="alignright">19</p>
                             <br>
-                            <p class="alignleft">Served with a brown butter sage sauce</p>
+                            <p class="item-description">Served with a brown butter sage sauce</p>
                             <br>
                         </div>
                     </li>
@@ -129,7 +129,7 @@
                             <p class="alignleft">Osso Bucco</p>
                             <p class="alignright">27</p>
                             <br>
-                            <p class="alignleft">Served with mushroom risotto and grilled vegetables</p>
+                            <p class="item-description">Served with mushroom risotto and grilled vegetables</p>
                             <br>
                         </div>
                     </li>
@@ -138,7 +138,7 @@
                             <p class="alignleft">Seared Duck Breast</p>
                             <p class="alignright">28</p>
                             <br>
-                            <p class="alignleft">Served with rainbow carrots and turnip purée</p>
+                            <p class="item-description">Served with rainbow carrots and turnip purée</p>
                             <br>
                         </div>
                     </li>
