--- a/Responsive Website Project/index.html
+++ b/Responsive Website Project/index.html
@@ -90,10 +90,19 @@
                 <p>(416) 443-1030</p>
                 <p>kchu@bayviewglen.ca</p>
                 <a href="#">Make a reservation</a>
-            </li>
-            <!--i frame for google maps i got it off this website https://google-map-generator.com/-->
-            <li>
-                <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=85%20Moatfield&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org">putlocker</a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+            </li><!--i frame for google maps i got it off this website https://google-map-generator.com/-->
+            <!--the map is styled here because i don't know how to do it in the css-->
+            <!--there is a smaller map and a bigger map. Media query decides which one is displayed-->
+            <div class="smallmap"> <iframe class="google_map" width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=85%20Moatfield&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style="
+                width: -webkit-fill-available;
+                max-height: 300px;
+                height: 40vh;
+                margin-right: 10%;
+                margin-top: 10%;
+            "></iframe></div>
+
+            <div class="bigmap"><div class="gmap_canvas"><iframe class="google_map" width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=85%20Moatfield&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org">putlocker</a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+            
             </li>
         </ul>
     </section>
