--- a/Responsive Website Project/about.html
+++ b/Responsive Website Project/about.html
@@ -13,16 +13,15 @@
 <body>
     <!--Navbar-->
     <nav class="navbar">
-        <div class="logo">
+        <div class="logo"> <!--on the left logo-->
             <a href="index.html">
               Lorem Ipsum Café
             </a>
         </div>
         <div class="container">
-            <input type="checkbox" class="toggle-menu">
-            <div class="hamburger"></div>
-
-            <ul class="menu">
+            <input type="checkbox" class="toggle-menu"> <!--Checkbox to determine if the menu is open or closed-->
+            <div class="hamburger"></div> <!--Three lines made in the css-->
+            <ul class="menu"> 
                 <li>
                     <a href="index.html" class="underline-hover-effect">Home</a>
                 </li>
@@ -43,17 +42,17 @@
         </div>
        </nav>
 
+
     <!--The About us side to the left-->
     <section class="half-page">
         <div class="about-us">
             <h1>About Us</h1>
              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam earum distinctio rem quisquam unde eos fugiat molestias nobis at inventore omnis ut odit repellat voluptate, blanditiis eaque laborum dicta quas pariatur alias magni perspiciatis ipsam aperiam nulla? Impedit autem commodi qui id, ex, dolorum porro cupiditate dolor maiores error asperiores repudiandae quo possimus sed perferendis necessitatibus ipsum modi itaque, non nisi accusamus voluptas quaerat blanditiis inventore? Dolorem quod ex sed ipsam totam! Provident laborum voluptates voluptas officiis ex minima quibusdam, rem odit! Atque ex similique id sequi eius voluptate vitae sit, iure, expedita et ipsa esse, numquam repellat. Suscipit, doloremque!</p>
         </div>
-        <div class="about-us">
+        <div class="about-us"> <!--Picture on the other half. Background set on css-->
         </div>
     </section>
 
-    
 
 
     <!--Footer-->
