--- a/Responsive Website Project/gallery.html
+++ b/Responsive Website Project/gallery.html
@@ -13,14 +13,14 @@
 <body>
     <!--Navbar-->
     <nav class="navbar">
-        <div class="logo">
+        <div class="logo"> <!--on the left logo-->
             <a href="index.html">
               Lorem Ipsum Café
             </a>
         </div>
         <div class="container">
-            <input type="checkbox" class="toggle-menu">
-            <div class="hamburger"></div>
+            <input type="checkbox" class="toggle-menu"> <!--Checkbox to determine if the menu is open or closed-->
+            <div class="hamburger"></div> <!--Three lines made in the css-->
 
             <ul class="menu">
                 <li>
@@ -42,16 +42,16 @@
             </ul>
         </div>
        </nav>
-    <!--Top Area With Title-->
 
 
+    <!--Header-->
     <header>
         <h1>Gallery</h1>
     </header>
 
-
+    <!--The container which contains the gallery (set to grid in css)-->
       <div class="container-gallery">
-        <div class="image-gallery">
+        <div class="image-gallery"> <!--Sets each grid box to have an image in it-->
             <img src="./images/peach salad.png">
         </div>    
        <div class="image-gallery">
@@ -94,12 +94,6 @@
 
      </div>
      
-     <div>
-        <br>
-        <br>
-        <br>
-     </div>
-
     <!--Footer-->
     <footer>
         <h4>Lorem Ipsum Café</h4>
