--- a/Responsive Website Project/index.html
+++ b/Responsive Website Project/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="container"> 
             <input type="checkbox" class="toggle-menu"> <!--Checkbox to determine if the menu is open or closed-->
-            <div class="hamburger"></div>
+            <div class="hamburger"></div> <!--Three lines made in the css-->
 
             <ul class="menu"> <!--navbar menu items-->
                 <li>
