--- a/Responsive Website Project/menu.html
+++ b/Responsive Website Project/menu.html
@@ -16,18 +16,17 @@
 </head>
 <body>
     <!--Navbar-->
-
     <nav class="navbar">
-        <div class="logo">
+        <div class="logo"> <!--on the left logo-->
             <a href="index.html">
               Lorem Ipsum Café
             </a>
         </div>
-        <div class="container">
-            <input type="checkbox" class="toggle-menu">
-            <div class="hamburger"></div>
+        <div class="container"> 
+            <input type="checkbox" class="toggle-menu"> <!--Checkbox to determine if the menu is open or closed-->
+            <div class="hamburger"></div> <!--Three lines made in the css-->
 
-            <ul class="menu">
+            <ul class="menu"> <!--navbar menu items-->
                 <li>
                     <a href="index.html" class="underline-hover-effect">Home</a>
                 </li>
@@ -47,16 +46,17 @@
             </ul>
         </div>
        </nav>
+       <!--Title/Header-->
        <header>
         <h1>Menu</h1>
-    </header>
+        </header>
     
-        <div class="menu-sections">
-            <div class="item">
+        <div class="menu-sections"> <!--Menu seperated into different sections -->
+            <div class="item"> <!--Menu Section-->
                 <h2>Starters</h2>
                 <ul>
                     <li>
-                        <div id="menu-item">
+                        <div id="menu-item"> <!--Each item, aligns name on left, and price on right-->
                             <p class="alignleft">Portabello Mushroom Salad</p>
                             <p class="alignright">12</p>
                             <br>
