--- a/Responsive Website Project/reserve.html
+++ b/Responsive Website Project/reserve.html
@@ -12,35 +12,36 @@
 </head>
 <body>
     <!--Navbar-->
-    <div class="logo"> <!--on the left logo-->
-        <a href="index.html">
-          Lorem Ipsum Café
-        </a>
-    </div>
-    <div class="container">
-        <input type="checkbox" class="toggle-menu"> <!--Checkbox to determine if the menu is open or closed-->
-        <div class="hamburger"></div> <!--Three lines made in the css-->
+    <nav class="navbar">
+        <div class="logo"> <!--on the left logo-->
+            <a href="index.html">
+                <img src="./images/logo.png" alt="">
+            </a>
+        </div>
+        <div class="container"> 
+            <input type="checkbox" class="toggle-menu"> <!--Checkbox to determine if the menu is open or closed-->
+            <div class="hamburger"></div> <!--Three lines made in the css-->
 
-        <ul class="menu">
-            <li>
-                <a href="index.html" class="underline-hover-effect">Home</a>
-            </li>
-            <li>
-                <a href="menu.html"class="underline-hover-effect">Menu</a>
-            </li>
-            <li>
-                <a href="gallery.html"class="underline-hover-effect">Gallery</a>
-            </li>
-            <li>
-                <a href="about.html"class="underline-hover-effect">About Us</a>
-            </li>
-            <li>
-                <a href="reserve.html"class="underline-hover-effect">Make a Reservation</a>
-            </li>
+            <ul class="menu"> <!--navbar menu items-->
+                <li>
+                    <a href="index.html" class="underline-hover-effect">Home</a>
+                </li>
+                <li>
+                    <a href="menu.html"class="underline-hover-effect">Menu</a>
+                </li>
+                <li>
+                    <a href="gallery.html"class="underline-hover-effect">Gallery</a>
+                </li>
+                <li>
+                    <a href="about.html"class="underline-hover-effect">About Us</a>
+                </li>
+                <li>
+                    <a href="reserve.html"class="underline-hover-effect">Make a Reservation</a>
+                </li>
 
-        </ul>
-    </div>
-   </nav>
+            </ul>
+        </div>
+       </nav>
 
 
    <!--Header-->
@@ -102,8 +103,8 @@
 
     <!--Footer-->
     <footer>
-        <h4>Lorem Ipsum Café</h4>
-        <p>all photos by Kaiyan Chu</p>
+        <img src="./images/logo-white.png" alt="">
+        <p>All photos made and taken by Kaiyan Chu</p>
         <span> 
             <a href="https://www.instagram.com/kaiyancreates" class="fa fa-instagram"></a>
         
