--- a/Responsive Website Project/gallery.html
+++ b/Responsive Website Project/gallery.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <div class="logo"> <!--on the left logo-->
             <a href="index.html">
-              Lorem Ipsum Café
+                <img src="./images/logo.png" alt="">
             </a>
         </div>
         <div class="container">
@@ -96,8 +96,8 @@
      
     <!--Footer-->
     <footer>
-        <h4>Lorem Ipsum Café</h4>
-        <p>all photos by Kaiyan Chu</p>
+        <img src="./images/logo-white.png" alt="">
+        <p>All photos made and taken by Kaiyan Chu</p>
         <span> 
             <a href="https://www.instagram.com/kaiyancreates" class="fa fa-instagram"></a>
         
@@ -108,7 +108,5 @@
         <p>@kaiyancreates</p>
 
     </footer>
-
-
 </body>
 </html>
