--- a/Responsive Website Project/index.html
+++ b/Responsive Website Project/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar">
         <div class="logo"> <!--on the left logo-->
             <a href="index.html">
-              Lorem Ipsum Café
+            <img src="./images/logo.png" alt=""> 
             </a>
         </div>
         <div class="container"> 
@@ -45,10 +45,10 @@
        </nav>
 
     <!--Top Area With Title-->
-    <header id="showcase" class="grid">
+    <header id="showcase">
         <div class="background-image"></div>
         <div class="content-wrap">
-        <h1>Lorem Ipsum Café</h1>
+        <img src="./images/logo.png" alt="">
         <h2>Fine Dining</h2>
     </div>
     </header>
@@ -89,7 +89,6 @@
                 <p>85 Moatfield Road, Toronto, Ontario</p>
                 <p>(416) 443-1030</p>
                 <p>kchu@bayviewglen.ca</p>
-                <a href="#">Make a reservation</a>
             </li><!--i frame for google maps i got it off this website https://google-map-generator.com/-->
             <!--the map is styled here because i don't know how to do it in the css-->
             <!--there is a smaller map and a bigger map. Media query decides which one is displayed-->
@@ -109,13 +108,11 @@
 
     <!--Footer-->
     <footer>
-        <h4>Lorem Ipsum Café</h4>
-        <p>all photos by Kaiyan Chu</p>
+        <img src="./images/logo-white.png" alt="">
+        <p>All photos made and taken by Kaiyan Chu</p>
         <span> 
             <a href="https://www.instagram.com/kaiyancreates" class="fa fa-instagram"></a>
-        
             <a href="https://www.instagram.com/kaiyancreates" class="fa fa-twitter"></a>
-        
             <a href="https://www.instagram.com/kaiyancreates" class="fa fa-facebook"></a>
         </span>
         <p>@kaiyancreates</p>
