--- a/Responsive Website Project/menu.html
+++ b/Responsive Website Project/menu.html
@@ -19,7 +19,7 @@
     <nav class="navbar">
         <div class="logo"> <!--on the left logo-->
             <a href="index.html">
-              Lorem Ipsum Café
+                <img src="./images/logo.png" alt="">
             </a>
         </div>
         <div class="container"> 
@@ -211,7 +211,7 @@
 
                     <li>
                         <div id="menu-item">
-                            <p class="alignleft">Sparkling Water</p>
+                            <p class="alignleft">Lime Water</p>
                             <p class="alignright">1</p>
                             <br>
                     
@@ -225,8 +225,8 @@
 
     <!--Footer-->
     <footer>
-        <h4>Lorem Ipsum Café</h4>
-        <p>all photos by Kaiyan Chu</p>
+        <img src="./images/logo-white.png" alt="">
+        <p>All photos made and taken by Kaiyan Chu</p>
         <span> 
             <a href="https://www.instagram.com/kaiyancreates" class="fa fa-instagram"></a>
         
