bulma again bc idk

--- a/Bulma Projects/bulma-admin-page.html
+++ b/Bulma Projects/bulma-admin-page.html
@@ -150,7 +150,7 @@
 
               <div class="card">
                 <header class="card-header">
-                  <p class="card-header-title">
+                  <p class="card-header-title has-text-grey has-text-weight-normal">
                     Events
                   </p>
                   <button class="card-header-icon" aria-label="more options">
@@ -205,7 +205,7 @@
               <div class="column">
                 <div class="card">
                   <header class="card-header">
-                    <p class="card-header-title">
+                    <p class="card-header-title has-text-grey has-text-weight-normal">
                       Inventory Search
                     </p>
                     <button class="card-header-icon" aria-label="more options">
@@ -236,7 +236,7 @@
 
               <div class="card">
                 <header class="card-header">
-                  <p class="card-header-title">
+                  <p class="card-header-title has-text-grey has-text-weight-normal">
                     User Search
                   </p>
                   <button class="card-header-icon" aria-label="more options">
