--- a/Bulma Projects/bulma-admin-page.html
+++ b/Bulma Projects/bulma-admin-page.html
@@ -106,7 +106,7 @@
           
           <br>
 
-          <div class="columns">
+          <div class="columns has-text-centered">
             <div class="column">
               <div class="card">
                 <div class="card-content">
