--- a/Introduction to Javascript/Calculator.html
+++ b/Introduction to Javascript/Calculator.html
@@ -108,7 +108,7 @@ function calculate(input){
       secondNum = Number(secondNum);
    }
 
-   if(isNaN(secondNum) || isNaN(firstNum) || secondNum ){
+   if(isNaN(secondNum) || isNaN(firstNum)){
       return 'ERROR';
    }
 
