no operator returns input, how calculator works

--- a/Introduction to Javascript/Calculator.html
+++ b/Introduction to Javascript/Calculator.html
@@ -108,6 +108,10 @@ function calculate(input){
       secondNum = Number(secondNum);
    }
 
+   if(indexOperator === -1){
+      return input;
+   }
+
    if(isNaN(secondNum) || isNaN(firstNum)){
       return 'ERROR';
    }
