--- a/Introduction to Javascript/SportsApp/root/admin.html
+++ b/Introduction to Javascript/SportsApp/root/admin.html
@@ -130,14 +130,16 @@
         </div>
 
         <div class="column is-one-quarter">
-          <form class="box">
+          <div class="box">
                 <p>Date</p>
                 <input type="date" class="input" id="date">
-
                 <div><button onclick="addGame()" class="button">Add Game</button></div>
-          </form>
+
+
+          </div>
         </div>
       </div>
+
 
       <div class="columns">
 
