--- a/Introduction to Javascript/SportsApp/root/games.html
+++ b/Introduction to Javascript/SportsApp/root/games.html
@@ -47,6 +47,22 @@
         Games
       </p> 
 
+      <div>
+        <p class="is-size-4 has-text-centered">Select date range</p>
+        <div class="columns">
+          <div class="column is-one-fifth"></div>
+          <div class="column is-one-fifth">        
+            <input type="date" class="input" id="date">
+          </div>
+          <div class="column is-one-fifth">
+            <input type="date" class="input" id="date">
+          </div>
+          <div class="column is-one-fifth">
+            <div><button onclick="filterDates()" class="button">Add Game</button></div>
+          </div>
+        </div>
+
+      </div>
     <section></section>
     <div id="paginationArea"></div>
     
