--- a/Introduction to Javascript/SportsApp/root/games.html
+++ b/Introduction to Javascript/SportsApp/root/games.html
@@ -29,7 +29,7 @@
           League Standings
         </a>
   
-        <a href="#" class="navbar-item">
+        <a href="admin.html" class="navbar-item">
           Add Games
         </a>
 
