--- a/Introduction to Javascript/SportsApp/root/sportsStatistics.html
+++ b/Introduction to Javascript/SportsApp/root/sportsStatistics.html
@@ -30,7 +30,7 @@
           League Standings
         </a>
   
-        <a href="#" class="navbar-item">
+        <a href="admin.html" class="navbar-item">
           Add Games
         </a>
 
