--- a/Introduction to Javascript/SportsApp/root/games.html
+++ b/Introduction to Javascript/SportsApp/root/games.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="../style/games.css">
 
-  <title>Document</title>
+  <title>Games</title>
 </head>
 
 <body>
