--- a/Introduction to Javascript/SportsApp/root/sportsStatistics.html
+++ b/Introduction to Javascript/SportsApp/root/sportsStatistics.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
   <link rel="stylesheet" href="../style/sportsStatistics.css">
-  <title>Document</title>
+  <title>Premier League Standings</title>
 </head>
 
 <!--Makes it sort by points as the default-->
